Update input[type=range]'s step base handling to match spec

https://bugs.webkit.org/show_bug.cgi?id=254761
rdar://problem/107721910

Reviewed by NOBODY (OOPS!).

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Merge: https://src.chromium.org/viewvc/blink?view=revision&revision=166367 &
https://chromium.googlesource.com/chromium/src.git/+/807ab32fd2e5accda8c5cef2678e0e0af23158b0

The HTML spec recently shifted to using 'value' as the first fallback
option for an input element's "step base" (if no 'min' attribute) [1].

[1] https://html.spec.whatwg.org/#concept-input-min-zero

Also bring type=range elements into line with that, including using
that step base when clamping values to the supported range.

According to the specification, we should not resolve step-mismatch if there are
no step-matched values in the range.  So, StepRange::clampValue() should return
the minimum value or the maximum value. [2]

[2] https://html.spec.whatwg.org/multipage/input.html#range-state-(type%3Drange)

* Source/WebCore/html/InputType.cpp:
(InputType::applyStep): Add 'stepMismatch' as well
(InputType::findStepBase): Add Helping function
* Source/WebCore/html/InputType.h: Helper function definition
* Source/WebCore/html/RangeInputType.cpp:
(RangeInputType::createStepRange): Use 'stepBase'
* Source/WebCore/html/StepRange.cpp:
(StepRange::clampValue): clampValue but respect 'stepBase'
* LayoutTests/fast/forms/range/range-stepup-stepdown.html: Rebaselined
* LayoutTests/fast/forms/range/range-stepup-stepdown-expected.txt: Rebaselined